--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "url": "https://github.com/zoellner"
     },
     "repository": {
-        "type" : "git",
-        "url" : "https://github.com/zoellner/openapi-preview.git"
+        "type": "git",
+        "url": "https://github.com/zoellner/openapi-preview.git"
     },
     "bugs": "https://github.com/zoellner/openapi-preview/issues",
     "license": "MIT",
@@ -44,7 +44,7 @@
         "@types/mocha": "^2.2.42"
     },
     "dependencies": {
-        "js-yaml": "^3.12.0",
+        "json-schema-ref-parser": "^6.0.2",
         "swagger-ui-dist": "^3.20.1"
     }
 }
