--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "bugs": "https://github.com/zoellner/openapi-preview/issues",
   "license": "MIT",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "engines": {
     "vscode": "^1.29.0"
   },
@@ -25,38 +25,45 @@
   ],
   "main": "./extension",
   "contributes": {
-    "commands": [{
-      "command": "extension.preview",
-      "title": "OpenAPI Preview"
-    }],
-    "configuration": [{
-      "title": "OpenAPI Preview Configuration",
-      "type": "object",
-      "properties": {
-        "openApiPreview.displayOperationId": {
-          "type": "boolean",
-          "default": false,
-          "description": "Controls the display of operationId in operations list, default: false. See Swagger UI displayOperationId option"
-        },
-        "openApiPreview.deepLinking": {
-          "type": "boolean",
-          "default": false,
-          "description": "If set to true, enables deep linking for tags and operations, default: false. See Swagger UI deepLinking option"
-        },
-        "openApiPreview.filter": {
-          "type": "boolean",
-          "default": false,
-          "description": "If set, enables filtering. The top bar will show an edit box that you can use to filter the tagged operations that are shown, default: false. See Swagger UI deepLinking option"
-        },
-        "openApiPreview.operationsSorter": {
-          "type": "string",
-          "default": "default",
-          "enum": ["default", "alpha", "method"],
-          "description": "Apply a sort to the operation list of each API. It can be 'alpha' (sort by paths alphanumerically), 'method' (sort by HTTP method), or 'default' which is the order returned by the server unchanged. See Swagger UI operationsSorter option"
-        }
-
+    "commands": [
+      {
+        "command": "extension.preview",
+        "title": "OpenAPI Preview"
       }
-    }]
+    ],
+    "configuration": [
+      {
+        "title": "OpenAPI Preview Configuration",
+        "type": "object",
+        "properties": {
+          "openApiPreview.displayOperationId": {
+            "type": "boolean",
+            "default": false,
+            "description": "Controls the display of operationId in operations list, default: false. See Swagger UI displayOperationId option"
+          },
+          "openApiPreview.deepLinking": {
+            "type": "boolean",
+            "default": false,
+            "description": "If set to true, enables deep linking for tags and operations, default: false. See Swagger UI deepLinking option"
+          },
+          "openApiPreview.filter": {
+            "type": "boolean",
+            "default": false,
+            "description": "If set, enables filtering. The top bar will show an edit box that you can use to filter the tagged operations that are shown, default: false. See Swagger UI deepLinking option"
+          },
+          "openApiPreview.operationsSorter": {
+            "type": "string",
+            "default": "default",
+            "enum": [
+              "default",
+              "alpha",
+              "method"
+            ],
+            "description": "Apply a sort to the operation list of each API. It can be 'alpha' (sort by paths alphanumerically), 'method' (sort by HTTP method), or 'default' which is the order returned by the server unchanged. See Swagger UI operationsSorter option"
+          }
+        }
+      }
+    ]
   },
   "scripts": {
     "postinstall": "node ./node_modules/vscode/bin/install",
