--- a/package.json
+++ b/package.json
@@ -70,14 +70,14 @@
     "test": "node ./node_modules/vscode/bin/test"
   },
   "devDependencies": {
-    "typescript": "^3.1.4",
-    "vscode": "^1.1.25",
-    "eslint": "^4.11.0",
-    "@types/node": "^8.10.25",
-    "@types/mocha": "^2.2.42"
+    "@types/mocha": "^5.2.6",
+    "@types/node": "^12.0.1",
+    "eslint": "^5.16.0",
+    "typescript": "^3.4.5",
+    "vscode": "^1.1.34"
   },
   "dependencies": {
-    "json-schema-ref-parser": "^6.0.2",
-    "swagger-ui-dist": "^3.20.1"
+    "json-schema-ref-parser": "^6.1.0",
+    "swagger-ui-dist": "^3.22.1"
   }
 }
