--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "version": "2.0.2",
   "engines": {
-    "vscode": "^1.29.0"
+    "vscode": "^1.47.0"
   },
   "categories": [
     "Other"
@@ -23,7 +23,7 @@
   "activationEvents": [
     "onCommand:openapiPreview.open"
   ],
-  "main": "./extension",
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
@@ -33,18 +33,22 @@
     ]
   },
   "scripts": {
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "node ./node_modules/vscode/bin/test"
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "lint": "eslint . --ext .ts,.tsx",
+    "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
-    "@types/mocha": "^9.1.1",
     "@types/node": "^16.11.32",
+    "@types/vscode": "^1.47.0",
+    "@types/vscode-webview": "^1.57.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
-    "typescript": "^4.6.4",
-    "vscode": "^1.1.37"
+    "typescript": "^4.6.4"
   },
   "dependencies": {
-    "@stoplight/elements": "^7.5.18",
-    "json-schema-ref-parser": "^9.0.9"
+    "@apidevtools/json-schema-ref-parser": "^9.0.9",
+    "@stoplight/elements": "^7.5.18"
   }
 }
