update vscodeignore and min vscode version update changelog

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -2,7 +2,8 @@
 .vscode-test/**
 test/**
 .gitignore
-vsc-extension-quickstart.md
-**/jsconfig.json
 **/*.map
-**/.eslintrc.json
+**/.eslintrc.js
+**/*.ts
+**/tsconfig.json
+!file.ts
