--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "watch": "tsc -watch -p ./"
   },
   "devDependencies": {
-    "@stoplight/elements": "^7.7.5",
     "@types/node": "^16.18.3",
     "@types/vscode": "^1.73.1",
     "@types/vscode-webview": "^1.57.0",
@@ -52,6 +51,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
-    "@apidevtools/json-schema-ref-parser": "^9.0.9"
+    "@apidevtools/json-schema-ref-parser": "^9.0.9",
+    "@stoplight/elements": "^7.7.18"
   }
 }
