--- a/package.json
+++ b/package.json
@@ -23,9 +23,6 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [
-    "onCommand:openapiPreview.open"
-  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
@@ -38,19 +35,18 @@
   "scripts": {
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
-    "lint": "eslint . --ext .ts,.tsx",
+    "lint": "eslint .",
     "watch": "tsc -watch -p ./",
     "postinstall": "cp node_modules/@stoplight/elements/{web-components.min.js,styles.min.css} ./media"
   },
   "devDependencies": {
-    "@stoplight/elements": "^7.7.18",
-    "@types/node": "^16.18.3",
+    "@stoplight/elements": "^8.3.3",
+    "@types/node": "^20.14.10",
     "@types/vscode": "^1.73.1",
     "@types/vscode-webview": "^1.57.0",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^5.43.0",
-    "eslint": "^8.27.0",
-    "typescript": "^4.9.3"
+    "eslint": "^9.6.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.0-alpha.41"
   },
   "dependencies": {
     "@apidevtools/json-schema-ref-parser": "^9.0.9"
