compile new version

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "Other"
   ],
   "main": "./out/extension.js",
+  "activationEvents": [
+    "onCommand:openapiPreview.open"
+  ],
   "contributes": {
     "commands": [
       {
